--- a/cursojs/exercicios/aula12ex/ex015/modelo.html
+++ b/cursojs/exercicios/aula12ex/ex015/modelo.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercício</title>
+    <title>Verificador de Idade</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>Verificador de Idade</h1>
@@ -13,13 +16,13 @@
     <section>
         <div id="info">
             <label for="iano">Ano de Nascimento:</label>
-            <input type="number" name="iano" id="iano" required><br>
-            <label for="isexo">Sexo:</label>
-            <input type="radio" name="isexo" id="imas">
-            <label for="imas">Masculino</label>
-            <input type="radio" name="isexo" id="ifem">
-            <label for="imas">Feminino</label><br>
-            <input type="button" value="Verificar">
+            <input type="number" name="iano" id="iano" required min="1900"><br>
+            Sexo:
+            <input type="radio" name="radsexo" id="masc" checked>
+            <label for="masc">Masculino</label>
+            <input type="radio" name="radsexo" id="fem">
+            <label for="fem">Feminino</label><br>
+            <input type="button" value="Verificar" onclick="verificar()">
         </div>
         <div id="result">
             <p id="frase">Preencha os dados acima para ver o resultado!</p>
@@ -32,4 +35,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
