--- a/cursojs/exercicios/aula14ex/ex017/modelo.html
+++ b/cursojs/exercicios/aula14ex/ex017/modelo.html
@@ -3,19 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercício</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
         <div>
-            Testando...
+            <label for="txt-numero">Número:</label>
+            <input type="number" name="txt-numero" id="txt-numero">
+            <button onclick="tabuada()">Gerar Tabuada</button>
+            <button onclick="alertar()">Alert</button>
         </div>
         <div>
-            Olá
+            <select name="tabuada" id="seletab" size="2">
+                <option>Digite um número acima!</option>
+            </select>
         </div>
     </section>
     <footer>
